--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
           <button class="small error" @click="unlisten(suber)">解订</button>
         </div>
       </div>
-      <div class="mask-tip" v-show="curSuber.id">
-        选择{{subType === 'add' ? '订阅' : '解除'}}对象
-        <span class="close" @click="closeChoice">+</span>
-      </div>
+      <transition name="fade">
+        <div class="mask-tip" v-show="curSuber.id">
+          选择{{subType === 'add' ? '订阅' : '解除'}}对象
+          <span class="close" @click="closeChoice">+</span>
+        </div>
+    </transition>
     </div>
 
     <div class="puber-list">
@@ -37,15 +39,19 @@
         <div class="puber">
           <button v-show="!curSuber.id" class="small success" @click="publish(puber)">发布消息</button>
           <span class="name">{{ puber.name }}</span>
-          <div class="choice-bg" @click="choicePuber(puber)" v-show="curSuber.id">
-            <i :class="selectedPuber.id === puber.id ? 'choice selected-' + subType : 'choice'"></i>
-          </div>
+          <transition name="fade">
+            <div class="choice-bg" @click="choicePuber(puber)" v-show="curSuber.id">
+              <i :class="selectedPuber.id === puber.id ? 'choice selected-' + subType : 'choice'"></i>
+            </div>
+        </transition>
         </div>
         <div class="suber-msg-wrapper">
           <div class="watcher-wrapper" :class="puber.watcherList.length ? 'light' : ''">
             <div class="watcher-tips">观察者模式列表：订阅时不选择事件，有发布就触发回调</div>
             <ul :class="['watcher-list','watcher-' + puber.id]">
-              <li :class="'suber-' + watcher.id" v-for="(watcher, index) in puber.watcherList" :key="index" :title="watcher.name">{{watcher.name}}</li>
+              <transition-group name="list">
+                <li :class="['suber-' + watcher.id, {'blink': watcher.refresh}]" v-for="(watcher, index) in puber.watcherList" :key="watcher.id" :title="watcher.name">{{watcher.name}}</li>
+              </transition-group>
             </ul>
           </div>
           <div class="suber-msg-list">
@@ -55,7 +61,9 @@
               </div>
               <div class="suber">
                 <ul :class="'puber-' + puber.id" :data-msg="key">
-                  <li :class="'suber-' + suber.id" v-for="suber in value" :key="suber.id" :title="suber.name">{{suber.name}}</li>
+                  <transition-group name="list">
+                    <li :class="['suber-' + suber.id, {'blink': suber.refresh}]" v-for="suber in value" :key="suber.id" :title="suber.name">{{suber.name}}</li>
+                  </transition-group>
                 </ul>
               </div>
             </div>
@@ -64,21 +72,24 @@
       </div>
     </div>
 
-    <div class="mask"></div>
-    <div class="msg-box">
-      <span class="close gray" @click="closeMsgBox">+</span>
-      <div class="title" v-show="subType === 'add' || msgType">{{msgType === 'listen' ? '订阅' : '发布'}}'{{selectedPuber.name}}'的消息</div>
-      <div class="title" v-show="subType === 'remove'">解除对'{{selectedPuber.name}}'消息的订阅</div>
-      <select v-model="msg" :class="!!msgIpt ? 'disabled' : ''" :disabled="!!msgIpt">
-        <option value="" selected>选择已有消息</option> 
-        <option v-for="(value, key, index) in selectedPuber.messageMap" :value="key" :key="index">{{key}}</option>
-      </select>
-      <input type="text" v-model="msgIpt" :class="!!msg ? 'disabled' : ''" :disabled="!!msg" placeholder="手动输入消息" maxlength="6">
-      <div class="btn-group btns">
-        <button @click="closeMsgBox">取消</button>
-        <button class="success" @click="msgConfirm">确定</button>
+    <transition name="fade">
+      <div class="mask" v-show="showMsgBox">
+        <div class="msg-box">
+          <span class="close gray" @click="closeMsgBox">+</span>
+          <div class="title" v-show="subType === 'add' || msgType">{{msgType === 'listen' ? '订阅' : '发布'}}'{{selectedPuber.name}}'的消息</div>
+          <div class="title" v-show="subType === 'remove'">解除对'{{selectedPuber.name}}'消息的订阅</div>
+          <select v-model="msg" :class="!!msgIpt ? 'disabled' : ''" :disabled="!!msgIpt">
+            <option value="" selected>选择已有消息</option> 
+            <option v-for="(value, key, index) in selectedPuber.messageMap" :value="key" :key="index">{{key}}</option>
+          </select>
+          <input type="text" v-model="msgIpt" :class="!!msg ? 'disabled' : ''" :disabled="!!msg" placeholder="手动输入消息" maxlength="6">
+          <div class="btn-group btns">
+            <button @click="closeMsgBox">取消</button>
+            <button class="success" @click="msgConfirm">确定</button>
+          </div>
+        </div>
       </div>
-    </div>
+  </transition>
   </div>
 </body>
 <script src="./index.js"></script>
